python-pytest-enabler: update to 3.3.0

--- a/mingw-w64-python-pytest-enabler/PKGBUILD
+++ b/mingw-w64-python-pytest-enabler/PKGBUILD
@@ -1,10 +1,9 @@
 # Maintainer: @naveen521kk on Github, Naveen M K <naveen521kk@gmail.com>
 
-_pyname=pytest-enabler
 _realname=pytest-enabler
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=3.1.1
+pkgver=3.3.0
 pkgrel=1
 pkgdesc='Enable installed pytest plugins (mingw-w64)'
 arch=('any')
@@ -22,22 +21,15 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
 makedepends=(
   "${MINGW_PACKAGE_PREFIX}-python-build"
   "${MINGW_PACKAGE_PREFIX}-python-installer"
-  "${MINGW_PACKAGE_PREFIX}-python-wheel"
   "${MINGW_PACKAGE_PREFIX}-python-setuptools"
   "${MINGW_PACKAGE_PREFIX}-python-setuptools-scm"
 )
-source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz")
-sha256sums=('9ea1157e716801f9ba3f1c3db4474ec2114a0b8e77b909c1eb0f7a630a325483')
-
-prepare() {
-  cd "$srcdir"
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_pyname//_/-}-$pkgver" "python-build-${MSYSTEM}"
-  export SETUPTOOLS_SCM_PRETEND_VERSION=${pkgver}
-}
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname/-/_}/${_realname/-/_}-${pkgver}.tar.gz")
+sha256sums=('7780165bf20a1b67230c480e1ac0f3653c0d42947bd6d39505e5d9c883263bd1')
 
 build() {
-  cd "python-build-${MSYSTEM}"
+  export SETUPTOOLS_SCM_PRETEND_VERSION=${pkgver}
+  cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
 
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
