wasmtime: install missing conf.h

--- a/mingw-w64-wasmtime/PKGBUILD
+++ b/mingw-w64-wasmtime/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-lib${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-docs")
 pkgver=25.0.1
-pkgrel=3
+pkgrel=4
 pkgdesc="A fast and secure runtime for WebAssembly (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -105,6 +105,8 @@ package_libwasmtime() {
 
   DESTDIR="${pkgdir}" cmake --install "build-${MSYSTEM}-static"
   DESTDIR="${pkgdir}" cmake --install "build-${MSYSTEM}-shared"
+  install -Dm644 "build-${MSYSTEM}-shared/include/wasmtime/conf.h" \
+    "${pkgdir}${MINGW_PREFIX}/include/wasmtime/conf.h"
   install -d "${pkgdir}${MINGW_PREFIX}/bin"
 
   mv "${pkgdir}${MINGW_PREFIX}/lib/wasmtime.dll" "${pkgdir}${MINGW_PREFIX}/bin/wasmtime.dll"
