Drop more clang32 packages
See https://github.com/msys2/msys2.github.io/commit/89521b9f8d43b6ebf4a4f4a51c912066ab5f5b50

--- a/mingw-w64-freeglut/PKGBUILD
+++ b/mingw-w64-freeglut/PKGBUILD
@@ -9,7 +9,7 @@ pkgver=3.6.0
 pkgrel=1
 pkgdesc="Freeglut allows the user to create and manage windows containing OpenGL contexts (mingw32-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://freeglut.sourceforge.io/"
 license=('spdx:MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
