--- a/mingw-w64-libatomic_ops/PKGBUILD
+++ b/mingw-w64-libatomic_ops/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=7.8.2
 pkgrel=1
 pkgdesc="Provides semi-portable access to hardware provided atomic memory operations (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.hboehm.info/gc"
 msys2_references=(
   "cpe: cpe:2.3:a:libatomic_ops_project:libatomic_ops"
