--- a/mingw-w64-python-pyproject-metadata/PKGBUILD
+++ b/mingw-w64-python-pyproject-metadata/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=0.8.0
 pkgrel=1
 pkgdesc="PEP 621 metadata parsing (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'mingw32' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw64' 'mingw32' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: python-pyproject-metadata'
   'pypi: pyproject-metadata'
