--- a/mingw-w64-python-rsa/PKGBUILD
+++ b/mingw-w64-python-rsa/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=4.9
 pkgrel=2
 pkgdesc='Pure-Python RSA implementation (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: rsa'
   "cpe: cpe:/a:python-rsa_project:python-rsa"
