--- a/mingw-w64-upx/PKGBUILD
+++ b/mingw-w64-upx/PKGBUILD
@@ -8,6 +8,7 @@ pkgrel=1
 pkgdesc='Ultimate executable compressor.'
 arch=('any')
 url='https://upx.github.io/'
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64')
 msys2_references=(
   "cpe: cpe:/a:upx_project:upx"
 )
