--- a/mingw-w64-gnome-common/PKGBUILD
+++ b/mingw-w64-gnome-common/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=3.18.0
 pkgrel=2
 pkgdesc="Common development macros for GNOME (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('GPL')
 url="https://www.gnome.org"
 makedepends=("${MINGW_PACKAGE_PREFIX}-autotools")
