--- a/mingw-w64-json-c/PKGBUILD
+++ b/mingw-w64-json-c/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=0.18
 pkgrel=1
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 pkgdesc="A JSON implementation in C (mingw-w64)"
 url='https://github.com/json-c/json-c'
 msys2_references=(
