--- a/mingw-w64-libclc/PKGBUILD
+++ b/mingw-w64-libclc/PKGBUILD
@@ -10,7 +10,7 @@ pkgver=${_version}${_rc/-/}
 pkgrel=1
 pkgdesc='Library requirements of the OpenCL C programming language (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://libclc.llvm.org/'
 license=('spdx:Apache-2.0')
 makedepends=("${MINGW_PACKAGE_PREFIX}-clang"
