--- a/mingw-w64-libelf/PKGBUILD
+++ b/mingw-w64-libelf/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.8.13
 pkgrel=7
 pkgdesc="ELF object file access library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('LGPL')
 url="http://www.mr511.de/software/english.html"
 options=('staticlibs')
