--- a/mingw-w64-libidn/PKGBUILD
+++ b/mingw-w64-libidn/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.42
 pkgrel=2
 pkgdesc="Implementation of the Stringprep, Punycode and IDNA specifications (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.gnu.org/software/libidn"
 msys2_repository_url="https://gitlab.com/libidn/libidn"
 msys2_references=(
