--- a/mingw-w64-libsigc++-3.0/PKGBUILD
+++ b/mingw-w64-libsigc++-3.0/PKGBUILD
@@ -10,7 +10,7 @@ conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}3")
 replaces=("${MINGW_PACKAGE_PREFIX}-${_realname}3")
 pkgdesc="Callback Framework for C++ - V3 (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://libsigcplusplus.github.io/libsigcplusplus/"
 license=('spdx:LGPL-2.1-or-later')
 makedepends=("${MINGW_PACKAGE_PREFIX}-meson"
