--- a/mingw-w64-mpc/PKGBUILD
+++ b/mingw-w64-mpc/PKGBUILD
@@ -9,7 +9,7 @@ pkgdesc="Multiple precision complex arithmetic library (mingw-w64)"
 url='http://www.multiprecision.org'
 license=('LGPL')
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: libmpc'
 )
