--- a/mingw-w64-opencl-icd/PKGBUILD
+++ b/mingw-w64-opencl-icd/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=2024.05.08
 pkgrel=1
 pkgdesc="OpenCL ICD Loader (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'aur: mingw-w64-opencl-icd'
 )
