--- a/mingw-w64-polly/PKGBUILD
+++ b/mingw-w64-polly/PKGBUILD
@@ -15,7 +15,7 @@ pkgrel=1
 pkgdesc="Polly - Polyhedral optimizations for LLVM (mingw-w64)"
 url="https://polly.llvm.org/"
 arch=(any)
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=("spdx:Apache-2.0 WITH LLVM-exception")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
