--- a/mingw-w64-python-atpublic/PKGBUILD
+++ b/mingw-w64-python-atpublic/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=5.0
 pkgrel=1
 pkgdesc="@public decorator for Python (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: python-atpublic'
   'pypi: atpublic'
