--- a/mingw-w64-python-expandvars/PKGBUILD
+++ b/mingw-w64-python-expandvars/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.12.0
 pkgrel=1
 pkgdesc="Expand system variables Unix style (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64' 'clang32' 'mingw32')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64' 'mingw32')
 url='https://github.com/sayanarijit/expandvars'
 msys2_references=(
   'pypi: expandvars'
