--- a/mingw-w64-python-httplib2/PKGBUILD
+++ b/mingw-w64-python-httplib2/PKGBUILD
@@ -11,7 +11,7 @@ pkgver=0.22.0
 pkgrel=2
 pkgdesc="Comprehensive HTTP client library, supporting many features (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('MIT')
 url="https://github.com/httplib2/httplib2"
 msys2_references=(
