--- a/mingw-w64-python-log_symbols/PKGBUILD
+++ b/mingw-w64-python-log_symbols/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.0.14
 pkgrel=3
 pkgdesc="Colored symbols for various log levels for Python (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64' 'clang32')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: log-symbols'
 )
