--- a/mingw-w64-python-mallard-ducktype/PKGBUILD
+++ b/mingw-w64-python-mallard-ducktype/PKGBUILD
@@ -10,7 +10,7 @@ pkgver=1.0.2
 pkgrel=5
 pkgdesc="Parser for the lightweight Ducktype syntax for Mallard (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: mallard-ducktype'
   'pypi: mallard-ducktype'
