--- a/mingw-w64-python-purl/PKGBUILD
+++ b/mingw-w64-python-purl/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.6
 pkgrel=4
 pkgdesc='An immutable URL class for easy URL-building and manipulation (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/codeinthehole/purl"
 msys2_references=(
   'pypi: purl'
