--- a/mingw-w64-python-pyasn1-modules/PKGBUILD
+++ b/mingw-w64-python-pyasn1-modules/PKGBUILD
@@ -14,7 +14,7 @@ msys2_references=(
 url='https://github.com/pyasn1/pyasn1-modules/'
 license=('spdx:BSD-2-Clause')
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 depends=("${MINGW_PACKAGE_PREFIX}-python-pyasn1")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
