--- a/mingw-w64-python-spinners/PKGBUILD
+++ b/mingw-w64-python-spinners/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.0.24
 pkgrel=3
 pkgdesc="Spinners for terminal, python wrapper for amazing node library cli-spinners (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64' 'clang32')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: spinners'
 )
