wasmtime: configure build type

--- a/mingw-w64-wasmtime/PKGBUILD
+++ b/mingw-w64-wasmtime/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-lib${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-docs")
 pkgver=25.0.1
-pkgrel=4
+pkgrel=5
 pkgdesc="A fast and secure runtime for WebAssembly (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -48,12 +48,20 @@ build() {
   export WINAPI_NO_BUNDLED_LIBRARIES=1
   export MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX="
 
+  declare -a extra_config
+  if check_option "debug" "n"; then
+    extra_config+=("-DCMAKE_BUILD_TYPE=Release")
+  else
+    extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
+  fi
+
   cmake \
     -GNinja \
     -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
     -DBUILD_SHARED_LIBS=OFF \
     -DWASMTIME_FASTEST_RUNTIME=ON \
     -DWASMTIME_TARGET="$(rustc -vV | sed -n 's/host: //p')" \
+    "${extra_config[@]}" \
     -S "${_realname}/crates/c-api" \
     -B "build-${MSYSTEM}-static"
 
@@ -65,6 +73,7 @@ build() {
     -DBUILD_SHARED_LIBS=ON \
     -DWASMTIME_FASTEST_RUNTIME=ON \
     -DWASMTIME_TARGET="$(rustc -vV | sed -n 's/host: //p')" \
+    "${extra_config[@]}" \
     -S "${_realname}/crates/c-api" \
     -B "build-${MSYSTEM}-shared"
 
