gtk4: Add patch to fix issue #21959
Fixes #21959

--- a/mingw-w64-gtk4/PKGBUILD
+++ b/mingw-w64-gtk4/PKGBUILD
@@ -5,7 +5,7 @@ pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-media-gstreamer")
 pkgver=4.16.3
-pkgrel=1
+pkgrel=2
 pkgdesc="GObject-based multi-platform GUI toolkit (v4) (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
@@ -40,9 +40,11 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-shared-mime-info")
 source=("https://download.gnome.org/sources/gtk/${pkgver:0:4}/gtk-${pkgver}.tar.xz"
         "https://gitlab.gnome.org/GNOME/gtk/-/commit/b569470b87d143d30c2388046c9a6450696f19b8.patch"
+        "https://gitlab.gnome.org/GNOME/gtk/-/commit/f840ae133711332a04831554e2de4739f2965835.patch"
         "001-fix-font-rendering.patch")
 sha256sums=('2ec53e07d18c9f003b39e4a6a838054d9259e048b6c4c05d80c0d05aa721d944'
             '50e6ac71f2081f80d334a5be5c8c49b9c1c3fab001c1f4ca0f2556d7f2ec92ed'
+            '2994b8cb3fe5217f694fce30c1e3600922b58e3754497c8683fde506f632b054'
             'a2c6e3350bd9c1744da6b7714b25cbd419645b731435f7d295a9f99da3c1479f')
 
 prepare() {
@@ -50,6 +52,9 @@ prepare() {
 
   # https://github.com/msys2/MINGW-packages/pull/20311#issuecomment-2014971531
   patch -R -Np1 -i ../b569470b87d143d30c2388046c9a6450696f19b8.patch
+
+  # https://gitlab.gnome.org/GNOME/gtk/-/merge_requests/7776
+  patch -Np1 -i ../f840ae133711332a04831554e2de4739f2965835.patch
 
   # Needed since https://gitlab.gnome.org/GNOME/gtk/-/commit/5f7cab4632c93acb3c7c818b5c69e92d657fe8de
   # otherwise the revert above is ignored too
