--- a/mingw-w64-qt6-base/PKGBUILD
+++ b/mingw-w64-qt6-base/PKGBUILD
@@ -54,8 +54,7 @@ source=("https://download.qt.io/official_releases/qt/${pkgver%.*}/${_qtver}/subm
         007-Fix-crashes-in-rasterization-code-using-setjmp.patch
         009-qfileinfo-undefine-mingw-stat.patch
         010-export-some-constexpr-variables.patch
-        011-qt6-windeployqt-fixes.patch
-        https://download.qt.io/official_releases/qt/6.7/CVE-2024-39936-qtbase-6.7.patch)
+        011-qt6-windeployqt-fixes.patch)
 sha256sums=('1bad481710aa27f872de6c9f72651f89a6107f0077003d0ebfcc9fd15cba3c75'
             '74a1c10fbc90ecf2b70013b2ea60977702f8428b9d2895b2d6c28196609c8bd3'
             '3848318bccdfa21a139ccdb70f8226358c4a7ed3943231494aab3df83025d7c7'
@@ -66,8 +65,7 @@ sha256sums=('1bad481710aa27f872de6c9f72651f89a6107f0077003d0ebfcc9fd15cba3c75'
             '3a256533401a48aff7e3c4b02118d62a0cccc2b3566c6e550e7b467aca3e496f'
             'f4261d43a142a24e5fa3b23e25813754839db84078cc8c6dc611139bf531e64a'
             '23656a7839d7dcb763d022722d723493c847914b0639bab861ddb05d823af5b7'
-            '742a15191e618a50c1fb4b93e87dda73a2bd130a6cb829cb2026256ec2c252e4'
-            'fb23b0dfd37a9008726fee97b30fd342681943db0e4c759f5f21f01d61b9975d')
+            '742a15191e618a50c1fb4b93e87dda73a2bd130a6cb829cb2026256ec2c252e4')
 
 # Use the right mkspecs file
 if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
