remove qt6.7 patch

--- a/mingw-w64-qt6-base/PKGBUILD
+++ b/mingw-w64-qt6-base/PKGBUILD
@@ -95,8 +95,7 @@ prepare() {
     006-qt-6.2.0-dont-add-resource-files-to-qmake-libs.patch \
     007-Fix-crashes-in-rasterization-code-using-setjmp.patch \
     009-qfileinfo-undefine-mingw-stat.patch \
-    011-qt6-windeployqt-fixes.patch \
-    CVE-2024-39936-qtbase-6.7.patch
+    011-qt6-windeployqt-fixes.patch
 
   if [[ ${MINGW_PACKAGE_PREFIX} != *-clang-* ]]; then
     apply_patch_with_msg \
