--- a/mingw-w64-wasmtime/PKGBUILD
+++ b/mingw-w64-wasmtime/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-lib${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-docs")
 pkgver=25.0.1
-pkgrel=5
+pkgrel=6
 pkgdesc="A fast and secure runtime for WebAssembly (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -111,6 +111,7 @@ package_wasmtime() {
 
 package_libwasmtime() {
   pkgdesc+=' (C-API)'
+  conflicts=("${MINGW_PACKAGE_PREFIX}-libwasmer")
 
   DESTDIR="${pkgdir}" cmake --install "build-${MSYSTEM}-static"
   DESTDIR="${pkgdir}" cmake --install "build-${MSYSTEM}-shared"
