mingw-w64: Update to 6cd6fee9c0

--- a/mingw-w64-headers-git/PKGBUILD
+++ b/mingw-w64-headers-git/PKGBUILD
@@ -4,9 +4,9 @@ _realname=headers
 pkgbase=mingw-w64-${_realname}-git
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-git"
 pkgdesc="MinGW-w64 headers for Windows (mingw-w64)"
-pkgver=12.0.0.r329.g8f7b5ce36
+pkgver=12.0.0.r335.g6cd6fee9c
 pkgrel=1
-_commit='8f7b5ce363fbfa9d66a38034525cf0fdae4385a3'
+_commit='6cd6fee9c063c50917618ded6e7e31246a7714ee'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
 url="https://www.mingw-w64.org/"
@@ -20,7 +20,7 @@ provides=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 options=('!strip' '!emptydirs')
 source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit")
-sha256sums=('fe38b2de09857c63c1f7496d83f6a53f674e55a2a80dc0d65aee9b6f96725e4e')
+sha256sums=('b1d3515160c81dabb7cfda1120b616be4fd1b50bac2a7a7d441849083c17e159')
 
 pkgver() {
   cd "${srcdir}/mingw-w64"
