--- a/mingw-w64-tools-git/PKGBUILD
+++ b/mingw-w64-tools-git/PKGBUILD
@@ -6,9 +6,9 @@ pkgbase=mingw-w64-${_realname}-git
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-git"
 provides=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=12.0.0.r329.g8f7b5ce36
+pkgver=12.0.0.r335.g6cd6fee9c
 pkgrel=1
-_commit='8f7b5ce363fbfa9d66a38034525cf0fdae4385a3'
+_commit='6cd6fee9c063c50917618ded6e7e31246a7714ee'
 pkgdesc="MinGW-w64 tools (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
@@ -23,7 +23,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 options=('!emptydirs')
 source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit")
-sha256sums=('fe38b2de09857c63c1f7496d83f6a53f674e55a2a80dc0d65aee9b6f96725e4e')
+sha256sums=('b1d3515160c81dabb7cfda1120b616be4fd1b50bac2a7a7d441849083c17e159')
 _tools="gendef genidl genpeimg widl" # genstubdll
 
 pkgver() {
