--- a/mingw-w64-trunk/PKGBUILD
+++ b/mingw-w64-trunk/PKGBUILD
@@ -13,7 +13,7 @@ msys2_repository_url='https://github.com/trunk-rs/trunk'
 license=('spdx:MIT OR Apache-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-openssl"
          "${MINGW_PACKAGE_PREFIX}-rust-wasm")
-makedepends=("${MINGW_PACKAGE_PREFIX}-pkg-config"
+makedepends=("${MINGW_PACKAGE_PREFIX}-pkgconf"
              "${MINGW_PACKAGE_PREFIX}-rust")
 source=("$msys2_repository_url/archive/v$pkgver/$_realname-$pkgver.tar.gz")
 sha256sums=('388d42cef7b8e78081c3371f31e11db6aba69b65c5c89ccf2f0d537922e4ddce')
