python-google-auth: update to 2.35.0

--- a/mingw-w64-python-google-auth/PKGBUILD
+++ b/mingw-w64-python-google-auth/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=google-auth
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=2.32.0
+pkgver=2.35.0
 pkgrel=1
 pkgdesc='Google Authentication Library (mingw-w64)'
 arch=('any')
@@ -34,10 +34,9 @@ checkdepends=("${MINGW_PACKAGE_PREFIX}-python-flask"
               "${MINGW_PACKAGE_PREFIX}-python-responses")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
-             "${MINGW_PACKAGE_PREFIX}-python-wheel")
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname/-/_}/${_realname/-/_}-${pkgver}.tar.gz")
-sha256sums=('49315be72c55a6a37d62819e3573f6b416aca00721f7e3e31a008d928bf64022')
+sha256sums=('f4c64ed4e01e8e8b646ef34c018f8bf3338df0c8e37d8b3bba40e7f574a3278a')
 
 build() {
   cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
