python-sphinx-tabs: update to 3.4.7

--- a/mingw-w64-python-sphinx-tabs/PKGBUILD
+++ b/mingw-w64-python-sphinx-tabs/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=sphinx-tabs
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=3.4.5
+pkgver=3.4.7
 pkgrel=1
 pkgdesc="Create tabbed content in Sphinx documentation (mingw-w64)"
 arch=('any')
@@ -20,15 +20,9 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-pygments")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
-             "${MINGW_PACKAGE_PREFIX}-python-wheel")
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('ba9d0c1e3e37aaadd4b5678449eb08176770e0fc227e769b6ce747df3ceea531')
-
-prepare() {
-  cd "${srcdir}/${_realname}-${pkgver}"
-  sed -i -e 's|~=|>=|' setup.py
-}
+sha256sums=('991ad4a424ff54119799ba1491701aa8130dd43509474aef45a81c42d889784d')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
