--- a/mingw-w64-python-spin/PKGBUILD
+++ b/mingw-w64-python-spin/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.7
 pkgrel=1
 pkgdesc="Developer tool for scientific Python libraries (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/scientific-python/spin'
 license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
