add fixes for msys2

--- a/mingw-w64-gnustep-gui/PKGBUILD
+++ b/mingw-w64-gnustep-gui/PKGBUILD
@@ -27,6 +27,10 @@ sha256sums=('b5bf50bf86a391e541d3d37fe600175e95e5a004180d43b55aee9ca1d575e8f9')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
+  curl -o patch.diff https://github.com/gnustep/libs-gui/commit/4d508632758f72b43e2a1450fa24d861dc9eecbd.diff # GSCodingFlags incorrectly packed
+  patch -p1 -i patch.diff
+  curl -o patch.diff https://github.com/gnustep/libs-gui/commit/3b02ac1d9da1a8184c4a5d27999f95ee5bf34719.diff # Fix NSSliderCell not handling integerValue on MSYS2
+  patch -p1 -i patch.diff
 }
 
 build() {
