czkawka: update to 8.0.0

--- a/mingw-w64-czkawka/PKGBUILD
+++ b/mingw-w64-czkawka/PKGBUILD
@@ -1,12 +1,12 @@
-# Maintainer: Maksim Bondarenkov <fabiscafe-cat-mailbox-dog-org>
+# Maintainer: Maksim Bondarenkov <maksapple2306@gmail.com>
 
 _realname=czkawka
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}-cli"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-gui"
          "${MINGW_PACKAGE_PREFIX}-krokiet")
-pkgver=7.0.0
-pkgrel=2
+pkgver=8.0.0
+pkgrel=1
 pkgdesc="Multi functional app to find duplicates, empty folders, similar images etc (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -23,7 +23,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-libheif")
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust" "${MINGW_PACKAGE_PREFIX}-pkgconf")
 source=("https://github.com/qarmin/czkawka/archive/${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('ce7d072056dedc4f2ca4d3647dc786ba071d4f3c58e79415da18d7dafd62e87b')
+sha256sums=('df67ca80b1307e8497afee057e139498ff5d80edc65e6c1f14b467bdf212033d')
 noextract=("${_realname}-${pkgver}.tar.gz")
 
 prepare() {
@@ -34,23 +34,31 @@ prepare() {
 }
 
 build() {
-  cd "${srcdir}/${_realname}-${pkgver}"
+  cd "${_realname}-${pkgver}"
 
-  cargo build --bin czkawka_cli --release --frozen --features "heif libraw"
-  cargo build --bin czkawka_gui --release --frozen --features "heif libraw"
-  cargo build --bin krokiet --release --frozen --features "heif libraw"
+  cargo build \
+    --bin krokiet \
+    --bin czkawka_gui \
+    --bin czkawka_cli \
+    --release \
+    --frozen \
+    --features "heif libraw"
 }
 
 check() {
-  cd "${srcdir}/${_realname}-${pkgver}"
+  cd "${_realname}-${pkgver}"
 
-  cargo test --bin czkawka_cli --release --frozen --features "heif libraw"
-  cargo test --bin czkawka_gui --release --frozen --features "heif libraw"
-  cargo test --bin krokiet --release --frozen --features "heif libraw"
+  cargo test \
+    --bin czkawka_cli \
+    --bin czkawka_gui \
+    --bin krokiet \
+    --release \
+    --frozen \
+    --features "heif libraw"
 }
 
 package_czkawka-cli() {
-  cd "${srcdir}/${_realname}-${pkgver}"
+  cd "${_realname}-${pkgver}"
 
   depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs" "${MINGW_PACKAGE_PREFIX}-libheif")
   license=('spdx:MIT')
@@ -61,7 +69,7 @@ package_czkawka-cli() {
 }
 
 package_czkawka-gui() {
-  cd "${srcdir}/${_realname}-${pkgver}"
+  cd "${_realname}-${pkgver}"
 
   license=('spdx:MIT AND CC-BY-4.0')
   pkgdesc+=" (Desktop App)"
@@ -71,7 +79,7 @@ package_czkawka-gui() {
 }
 
 package_krokiet() {
-  cd "${srcdir}/${_realname}-${pkgver}"
+  cd "${_realname}-${pkgver}"
 
   depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs" "${MINGW_PACKAGE_PREFIX}-libheif")
   license=('spdx:MIT AND GPL-3.0-or-later')
