wasm-component-ld: update to 0.5.10

--- a/mingw-w64-wasm-component-ld/PKGBUILD
+++ b/mingw-w64-wasm-component-ld/PKGBUILD
@@ -1,7 +1,9 @@
+# Maintainer: Maksim Bondarenkov <maksapple2306@gmail.com>
+
 _realname=wasm-component-ld
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.5.6
+pkgver=0.5.10
 pkgrel=1
 pkgdesc="Command line linker for creating WebAssembly components (mingw-w64)"
 arch=('any')
@@ -20,40 +22,30 @@ makedepends=(
   'git'
 )
 checkdepends=("${MINGW_PACKAGE_PREFIX}-rust-wasm")
-source=("git+$url#tag=v$pkgver")
-sha256sums=('272c96588f1bbc817184438e076c916b11395abb83110e203bdcae95922dc538')
+source=("${url}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('aa049a93da595e4dacf742865f13e7fb1cec1ab47de9258f0a11d81ad6c7a77b')
 
 prepare() {
-  cd "${_realname}"
+  cd "${_realname}-${pkgver}"
 
   cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
 
 build() {
-  cd "${_realname}"
+  cd "${_realname}-${pkgver}"
 
-  # Use debug
-  export CARGO_PROFILE_RELEASE_DEBUG=2
-
-  # Use LTO
-  export CARGO_PROFILE_RELEASE_LTO=true CARGO_PROFILE_RELEASE_CODEGEN_UNITS=1
-
-  cargo build --release --frozen --all-targets
+  cargo build --release --frozen
 }
 
 check() {
-  cd "${_realname}"
-  cargo test --frozen
+  cd "${_realname}-${pkgver}"
+
+  cargo test --release --frozen
 }
 
 package() {
-  cd "${_realname}"
+  cd "${_realname}-${pkgver}"
 
-  install -D target/release/wasm-component-ld -t "${pkgdir}${MINGW_PREFIX}/bin"
-
-  # Package doc
-  install -Dm644 README.md -t "${pkgdir}${MINGW_PREFIX}/share/doc/${_realname}"
-
-  # Package licenses
+  install -Dm755 target/release/wasm-component-ld "${pkgdir}${MINGW_PREFIX}/bin/wasm-component-ld"
   install -Dm644 LICENSE* -t "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}"
 }
