pyinstaller: add cc to makedepends

--- a/mingw-w64-pyinstaller/PKGBUILD
+++ b/mingw-w64-pyinstaller/PKGBUILD
@@ -4,7 +4,7 @@ _realname=pyinstaller
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=6.10.0
-pkgrel=1
+pkgrel=2
 pkgdesc='Bundles a Python application and all its dependencies into a single package (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -18,7 +18,8 @@ depends=("${MINGW_PACKAGE_PREFIX}-binutils"
          "${MINGW_PACKAGE_PREFIX}-python-pefile"
          "${MINGW_PACKAGE_PREFIX}-python-pywin32-ctypes"
          "${MINGW_PACKAGE_PREFIX}-python-setuptools")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
+             "${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-wheel")
 options=('!strip')
