add correct path to patch

--- a/mingw-w64-gnustep-gui/PKGBUILD
+++ b/mingw-w64-gnustep-gui/PKGBUILD
@@ -33,8 +33,8 @@ sha256sums=('b5bf50bf86a391e541d3d37fe600175e95e5a004180d43b55aee9ca1d575e8f9'
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
-  patch -p1 -i 4d508632758f72b43e2a1450fa24d861dc9eecbd.diff
-  patch -p1 -i 3b02ac1d9da1a8184c4a5d27999f95ee5bf34719.diff
+  patch -p1 -i ${srcdir}/4d508632758f72b43e2a1450fa24d861dc9eecbd.diff
+  patch -p1 -i ${srcdir}/3b02ac1d9da1a8184c4a5d27999f95ee5bf34719.diff
 }
 
 build() {
