lib2geom: update to 1.4

--- a/mingw-w64-lib2geom/PKGBUILD
+++ b/mingw-w64-lib2geom/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=lib2geom
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=1.3
-pkgrel=4
+pkgver=1.4
+pkgrel=1
 pkgdesc='Easy to use 2D geometry library in C++ (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -22,15 +22,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-boost"
              "${MINGW_PACKAGE_PREFIX}-ragel")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-gtest")
-source=("https://gitlab.com/inkscape/${_realname}/-/archive/${pkgver}/${_realname}-${pkgver}.tar.bz2"
-        "002-avoid-std-shared_ptr-unique.patch::https://gitlab.com/inkscape/lib2geom/-/commit/9b1ff56a.patch")
-sha256sums=('bd07f2a1322fcad16a55a1901207faa55dffdecebc56a00eabd4575f62e043c9'
-            '0f815ff024bafa3459c9cfebe82ffb615b64b55ea36984a7910d329b40465dbd')
-
-prepare() {
-  cd ${_realname}-${pkgver}
-  patch -p1 -l -i ${srcdir}/002-avoid-std-shared_ptr-unique.patch
-}
+source=("https://gitlab.com/inkscape/${_realname}/-/archive/${pkgver}/${_realname}-${pkgver}.tar.bz2")
+sha256sums=('717a87ce7f2192271a789c1273ae7b432856c522647b9fe33bb4dd662942b3ea')
 
 build() {
   declare -a _extra_config
