inkscape: update to 1.4

--- a/mingw-w64-inkscape/PKGBUILD
+++ b/mingw-w64-inkscape/PKGBUILD
@@ -5,8 +5,8 @@
 _realname=inkscape
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=1.3.2
-pkgrel=10
+pkgver=1.4
+pkgrel=1
 pkgdesc="Vector graphics editor using the SVG file format (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -35,9 +35,10 @@ depends=("${MINGW_PACKAGE_PREFIX}-aspell"
          "${MINGW_PACKAGE_PREFIX}-glib2"
          "${MINGW_PACKAGE_PREFIX}-graphicsmagick"
          "${MINGW_PACKAGE_PREFIX}-gsl"
-         "${MINGW_PACKAGE_PREFIX}-gtkmm3"
-         "${MINGW_PACKAGE_PREFIX}-gtkspell3"
+         "${MINGW_PACKAGE_PREFIX}-gspell"
          "${MINGW_PACKAGE_PREFIX}-gtk-update-icon-cache"
+         "${MINGW_PACKAGE_PREFIX}-gtkmm3"
+         "${MINGW_PACKAGE_PREFIX}-gtksourceview4"
          "${MINGW_PACKAGE_PREFIX}-harfbuzz"
          "${MINGW_PACKAGE_PREFIX}-hicolor-icon-theme"
          "${MINGW_PACKAGE_PREFIX}-lcms2"
@@ -73,18 +74,10 @@ optdepends=(#"${MINGW_PACKAGE_PREFIX}-pstoedit: latex formulas"
 source=("https://media.inkscape.org/dl/resources/file/${_realname}-${pkgver}.tar.xz"
         inkscape-1.0.1-unbundle.patch
         inkscape-1.0.1-install-layout.patch
-        003-include-missing-header.patch::https://gitlab.com/inkscape/inkscape/-/commit/694d8ae4.patch
-        004-up-c++-to-c++20.patch::https://gitlab.com/inkscape/inkscape/-/commit/1798e9c1.patch
-        005-fix-build-with-poppler-24.03.patch::https://gitlab.com/inkscape/inkscape/-/commit/f7e94457.patch
-        006-fix-build-with-poppler-24.05.patch::https://gitlab.com/inkscape/inkscape/-/commit/96ca7a6c.patch
         007-no-console-clang.patch)
-sha256sums=('dbd1844dc443fe5e10d3e9a887144e5fb7223852fff191cfb5ef7adeab0e086b'
+sha256sums=('c59a85453b699addebcd51c1dc07684dd96a10c8aec716b19551db50562e13f5'
             '92387251c1740f1a57cde9e587cc673ef1600813617bd2c9db65598c324a24d4'
             '131b2e1190637df0554ef1ee8cf46440689584375c117d057ab47d5871c58128'
-            'edc55ad0771b604c63737524fc5928a35334db04d6479e395801635d5f6dfc1f'
-            '658f9d5c63af94e5e85d649e1fd9d45d6639916702154197dfa25afc1a515145'
-            '8b85c64eb65d248c1b8cf5b670314dad67be63f3b6e8235e0473e73f53255bed'
-            'a83bb96779db1d3ed475d32e67c4ef1a5b56675c7cf323a04c5b28f938a0ac4e'
             'c49d38b7c1a66e4b40e1b75fb055b730eb863a67a74d899da6d4d6db6baedcec')
 noextract=("${_realname}-${pkgver}.tar.xz")
 
@@ -106,10 +99,6 @@ prepare() {
   apply_patch_with_msg \
     inkscape-1.0.1-unbundle.patch \
     inkscape-1.0.1-install-layout.patch \
-    003-include-missing-header.patch \
-    004-up-c++-to-c++20.patch \
-    005-fix-build-with-poppler-24.03.patch \
-    006-fix-build-with-poppler-24.05.patch \
     007-no-console-clang.patch
 }
 
@@ -133,7 +122,6 @@ build() {
     -DBUILD_TESTING=OFF \
     -DCMAKE_AR=${MINGW_PREFIX}/bin/ar \
     -DWITH_IMAGE_MAGICK=OFF \
-    -DWITH_INTERNAL_CAIRO=OFF \
     -DWITH_INTERNAL_2GEOM=OFF \
     ../${_realname}-${pkgver}
 
