cargo-tauri: update to 2.0.3

--- a/mingw-w64-cargo-tauri/PKGBUILD
+++ b/mingw-w64-cargo-tauri/PKGBUILD
@@ -4,20 +4,21 @@ _basename=tauri
 _realname=cargo-${_basename}
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.0.2
+pkgver=2.0.3
 pkgrel=1
-pkgdesc="Command line interface for building Tauri apps (mingw-w64)"
+pkgdesc='Command line interface for building Tauri apps (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url="https://github.com/tauri-apps/tauri"
+url='https://tauri.app/'
+msys2_repository_url='https://github.com/tauri-apps/tauri'
 msys2_references=(
   'archlinux: cargo-tauri'
 )
 license=('spdx:MIT OR Apache-2.0')
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust")
-source=("${url}/archive/${_basename}-cli-v${pkgver}/${_basename}-${_basename}-cli-v${pkgver}.tar.gz")
+source=("${msys2_repository_url}/archive/${_basename}-cli-v${pkgver}/${_basename}-${_basename}-cli-v${pkgver}.tar.gz")
 noextract=("${_basename}-${_basename}-cli-v${pkgver}.tar.gz")
-sha256sums=('7283eacd5f02b29d27f743eb540c55f3908f329208edd903bea477cb92452557')
+sha256sums=('c62065e87076fbb75e7aa6e38beaa31a4dd2c3e3f0ce36e2c2b9b8221e885f57')
 
 prepare() {
   [[ -d "${srcdir}/${_basename}-${_basename}-cli-v${pkgver}" ]] && rm -rf "${srcdir}/${_basename}-${_basename}-cli-v${pkgver}"
